src/css/main.css
@import 'https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:800|Alegreya+Sans:900|Alex+Brush|Berkshire+Swash|Buda:300|Corben|Dancing+Script|Dynalight|El+Messiri:700|Elsie:900|Exo+2:800|Fascinate|Great+Vibes|Italianno|Kite+One|Lancelot|Libre+Franklin:500|Lobster|Mallanna|Megrim|Milonga|Molle:400i|NTR|Oregano|Palanquin+Dark:600|Playball|Quintessential|Simonetta:400,900|Tangerine';

/*  TODO LIST
TODO: Replace @import with a <link>
TODO: Replace all colours with hexadecimals
TODO: Get rid of all unwanted things
*/

* {
  box-sizing: border-box;
  /*border: 1px solid red;*/
}

.this {
  border: 1px solid red;
}
.that {
  border: 1px solid green;
}

html, body {
  /*background-color: #000000;*/
  /*color: rosybrown; #or darkSalmon*/
  width: 100%;
}

h1, h2, h3, h4, h5, h6 {
  /*font-family: 'Milonga', cursive;*/
  /*font-family: 'Oregano', cursive;*/
  /*font-family: 'Simonetta', cursive;*/
  /*font-family: 'Dynalight', cursive;*/
  /*font-family: 'Playball', cursive;*/
  /*font-family: 'Fascinate', cursive;*/
  /*font-family: 'Lancelot', cursive;*/
  /*font-family: 'Megrim', cursive;*/
  /*font-family: 'Buda', cursive;*/
  /*font-family: 'Corben', cursive;*/
  /*font-family: 'Lobster', cursive;*/
  /*font-family: 'Molle', cursive;*/
  /*font-family: 'Great Vibes', cursive;*/
  /*font-family: 'Alex Brush', cursive;*/
  /*font-family: 'Italianno', cursive;*/
  /*font-family: 'Dancing Script', cursive;*/
  /*font-family: 'Tangerine', cursive;*/
  /*font-family: 'Libre Franklin', sans-serif;*/
  font-family: 'El Messiri', sans-serif;
  /*font-family: 'Palanquin Dark', sans-serif;*/
  /*font-family: 'Mallanna', sans-serif;*/
  /*font-family: 'NTR', sans-serif;*/
  /*font-family: 'Alegreya Sans SC', sans-serif;*/
  /*font-family: 'Alegreya Sans', sans-serif;*/
  /*font-family: 'Exo 2', sans-serif;*/
  /*font-family: 'Elsie', cursive;*/
  /*font-family: 'Quintessential', cursive;*/
  /*font-family: 'Kite One', sans-serif;*/
  /*font-family: 'Berkshire Swash', cursive;*/
}

.body {
  padding: 0.25em;
  width: 100%;
  border: 1px solid red;
}

/*
 * header
 */

.header {
  display: inline-flex;
  justify-content: space-around;
  align-items: center;
  max-height: 150px;
  /*border: 1px solid orange;*/
  width: 100%;
}

.logo, .name {
  /*border: 1px solid blue;*/
  flex: 1 1 50%;
}

.name {
  text-align: center;
  /*width: 100%;*/
  /*padding-right: 0.5em;*/
}

.logo > img {
  width: 100%;
  max-width: 175px;
  border-radius: 10px;
  /*border: 1px solid green;*/
  /*padding: 0 0.25em;*/
}

.name > * {
  /*border: 1px solid green;*/
  margin: 0.25em 0;
  /*padding: 0 0.25em;*/
  width: 100%;
}

/*
 *  I am
 */


.section-heading {
  padding: 0 0.5em;
  flex-basis: 100%;
}

.me-words > li {
  list-style-type: none;
  text-indent: -14px;
}

.me-words > li::before {
  content: "\02713   ";
}


/*
 * Portfolio
 */


/* flex container */
.portfolio {
 display: flex;
 flex-wrap: wrap;
 justify-content: space-around;
 /*border: 1px solid orange;*/
}

/* flex items  */
.project {
  text-align: center;
  margin: 0.5em;
/*   padding: 0.25em; */
  border: 1px solid lavender;
  box-shadow: 0.1em 0.1em lavender;
  flex: 1 1 300px;
  width: 100%; 
  cursor: pointer;
}

.project-img {
  max-width: 100%;
  border: 1px solid lavender;
  /*height: 170px;*/
}

/*.project > * {
  border: 1px solid orange;
}*/


/*
 * Footer
 */

.footer {
  border-top: 1px solid lavender;
  /*border: 1px solid red;*/
  padding: 1em;
  /*border: 1px solid green;*/
  /*width: 50%;*/
  margin: 1em auto;
  display: flex;
  justify-content: space-around;
}

.icon {
  width: 30px;
  height: 30px;
  stroke-width: 0.75;
  stroke: #9A4827;
  fill: black;
}

.icon::hover {
  cursor: pointer;
}

